<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5F78BF"
    android:padding="10dp">

    <TextView
        android:id="@+id/ownerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/carCount"
        app:layout_constraintStart_toStartOf="@id/carCount"
        tools:text="@string/owner_count" />

    <TextView
        android:id="@+id/carCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/bindCount"
        app:layout_constraintStart_toStartOf="@id/bindCount"
        tools:text="@string/car_count" />

    <TextView
        android:id="@+id/bindCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/bind_count" />

</androidx.constraintlayout.widget.ConstraintLayout>